# FiniteAutomatas

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cpp  task2c.cpp  test_script.sh
include/: DFA.h  NFA.h
src/: DFA.cpp  NFA.cpp  main.cpp
tests/: CMakeLists.txt  IsomorphicTests.cpp  IsomorphicTests.h  Task2aInput.txt  Task2aManualSolution.md  Task2aTest.cpp  Task2aTest.h  description.md
